--- a/AzureDurableFunctionsDemo1/AzureDurableFunctionsDemo1.csproj
+++ b/AzureDurableFunctionsDemo1/AzureDurableFunctionsDemo1.csproj
@@ -7,6 +7,7 @@
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.DurableTask" Version="1.6.2" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="3.0.2" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.24" />
+    <PackageReference Include="Xunit" Version="2.4.1" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
