Correct tests projects to pack

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ steps:
   displayName: Test
   inputs:
     command: 'test'
-    packagesToPack: '**/*[Tt]ests/*.csproj'
+    packagesToPack: '**/*[Tt]ests*.csproj'
     arguments: '--configuration $(BuildConfiguration)'
 
 - task: DotNetCoreCLI@2
