Sets test project to AzureDurableFunctionsDemo1.Tests.csproj

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ steps:
   displayName: Test
   inputs:
     command: 'test'
-    packagesToPack: '**/*[Tt]ests*.csproj'
+    packagesToPack: '**/AzureDurableFunctionsDemo1.Tests.csproj'
     arguments: '--configuration $(BuildConfiguration)'
 
 - task: DotNetCoreCLI@2
